<resources>
    <string name="app_name">To-Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">Todo</string>
    <string name="splash_image_description">Background Image</string>
    <string name="home_text">Home</string>
    <string name="type_your_pass">Type your password</string>
    <string name="retype_your_pass">Retype your password</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_email">Type your email</string>
    <string name="type_your_name">Type your name</string>
    <string name="register">Register</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="task_date">Task Date</string>
    <string name="sign_up">don\'t have an account? Sign Up</string>
    <string name="type_your_username">Type your username</string>
    <string name="type_your_password">Type your password</string>
    <string name="play_audio">Play Audio</string>

</resources>